--- a/Labs/Week 1/C4W1_Basic_Attention.ipynb
+++ b/Labs/Week 1/C4W1_Basic_Attention.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "a5288920",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
+   "id": "8fa9f4b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = np.array([[1,2]])\n",
+    "b = np.array([[3,4]])\n",
+    "#np.concatenate((a,b), axis = 1)\n",
+    "#b.repeat(2, axis = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "72857076",
    "metadata": {},
    "outputs": [],
@@ -99,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "fb638355",
    "metadata": {},
    "outputs": [
@@ -165,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "4546cbb5",
    "metadata": {},
    "outputs": [
@@ -290,19 +303,11 @@
     "print(context_vector)\n",
     "```"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "16a6caa8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "oldpyTF",
    "language": "python",
    "name": "python3"
   },
@@ -316,7 +321,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
