--- a/Labs/Week 2/C4W2_Attention.ipynb
+++ b/Labs/Week 2/C4W2_Attention.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,9 +95,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "query shape: (2, 3)\n",
+      "\n",
+      "[[1. 0. 0.]\n",
+      " [0. 1. 0.]]\n",
+      "\n",
+      "key shape: (2, 3)\n",
+      "\n",
+      "[[1. 2. 3.]\n",
+      " [4. 5. 6.]]\n",
+      "\n",
+      "value shape: (2, 3)\n",
+      "\n",
+      "[[0. 1. 0.]\n",
+      " [1. 0. 1.]]\n",
+      "\n",
+      "mask shape: (2, 2)\n",
+      "\n",
+      "[[1. 0.]\n",
+      " [1. 1.]]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "q = tf.constant([[1.0, 0.0, 0.0], [0.0, 1.0, 0.0]])\n",
     "display_tensor(q, 'query')\n",
@@ -121,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +188,6 @@
     "\n",
     "    # Multiply the attention weights by v\n",
     "    attention_output = tf.matmul(attention_weights, v)  # (..., seq_len_q, depth_v)\n",
-    "\n",
     "    return attention_output"
    ]
   },
@@ -174,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,15 +219,26 @@
     "\n",
     "    # Creates a matrix with ones below the diagonal and 0s above. It should have shape (1, mask_size, mask_size)\n",
     "    mask = tf.experimental.numpy.tril(tf.ones((mask_size, mask_size)))  \n",
-    "    \n",
     "    return dot_product_attention(q, k, v, mask, scale=scale)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "result shape: (2, 3)\n",
+      "\n",
+      "[[0.         1.         0.        ]\n",
+      " [0.8496094  0.15026855 0.8496094 ]]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "result = causal_dot_product_attention(q, k, v)\n",
     "display_tensor(result, 'result')"
@@ -210,7 +247,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "tfnew",
    "language": "python",
    "name": "python3"
   },
@@ -224,7 +261,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.9.20"
   }
  },
  "nbformat": 4,
