--- a/Programming Assignments/Week 3/C4W3_Assignment - Copy.ipynb
+++ b/Programming Assignments/Week 3/C4W3_Assignment - Copy.ipynb
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "aa56acc9",
    "metadata": {
     "deletable": false,
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "af728cb2",
    "metadata": {
     "deletable": false,
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "2ac53d57",
    "metadata": {
     "deletable": false,
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "7d2fec4b",
    "metadata": {
     "deletable": false,
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "83c48352",
    "metadata": {
     "colab": {
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "92d7037b",
    "metadata": {
     "deletable": false,
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "b25bb46d",
    "metadata": {
     "colab": {},
@@ -563,7 +563,6 @@
     "    vocab_size = tokenizer.vocab_size(name=None)\n",
     "    for i, char in enumerate(reversed(string.ascii_letters), 1):\n",
     "        decoded_text = tokenizer.detokenize([vocab_size - i]).numpy().decode(\"utf-8\")\n",
-    "        \n",
     "        # Sentinels, ex: <Z> - <a>\n",
     "        sentinels[decoded_text] = f'<{char}>'    \n",
     "    \n",
@@ -585,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "56d75b6c",
    "metadata": {
     "colab": {},
@@ -680,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "1fe92253",
    "metadata": {
     "deletable": false,
@@ -697,7 +696,7 @@
        "<tf.Tensor: shape=(), dtype=string, numpy=b'I want to dress up as an <V> this <b>.'>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -769,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "id": "c660bf97",
    "metadata": {
     "colab": {},
@@ -820,49 +819,34 @@
     "    # prev_no_mask is True if the previous token was NOT masked, False otherwise\n",
     "    # set prev_no_mask to True\n",
     "    prev_no_mask = True\n",
-    "    \n",
     "    # Loop over the tokenized text\n",
-    "    for token in tokenizer.tokenize(text).numpy():\n",
-    "        \n",
+    "    for token in tokenizer.tokenize(text).numpy():    \n",
     "        # Generate a random value between 0 and 1\n",
-    "        rnd_val = randomizer() \n",
-    "        \n",
+    "        rnd_val = randomizer()\n",
     "        # Check if the noise is greater than a random value (weighted coin flip)\n",
-    "        if noise > rnd_val:\n",
-    "            \n",
+    "        if noise > rnd_val:    \n",
     "            # Check if previous token was NOT masked\n",
     "            if prev_no_mask:\n",
-    "                \n",
     "                # Current sentinel increases by 1\n",
-    "                cur_sentinel_num += 1\n",
-    "                \n",
+    "                cur_sentinel_num += 1    \n",
     "                # Compute end_id by subtracting current sentinel value out of the total vocabulary size\n",
     "                end_id = vocab_size - cur_sentinel_num\n",
-    "                \n",
     "                # Append end_id at the end of the targets\n",
     "                targs.append(end_id)\n",
-    "                \n",
     "                # Append end_id at the end of the inputs\n",
     "                inps.append(end_id)\n",
-    "                \n",
     "            # Append token at the end of the targets\n",
     "            targs.append(token)\n",
-    "            \n",
     "            # set prev_no_mask accordingly\n",
     "            prev_no_mask = False\n",
-    "\n",
     "        else:\n",
-    "            \n",
     "            # Append token at the end of the inputs\n",
     "            inps.append(token)\n",
-    "            \n",
     "            # Set prev_no_mask accordingly\n",
     "            prev_no_mask = True\n",
     "    \n",
-    "    \n",
     "    # Add EOS token to the end of the targets\n",
-    "    targs.append(1)\n",
-    "    \n",
+    "    targs.append(eos)\n",
     "    ### END CODE HERE ###\n",
     "    \n",
     "    return inps, targs"
@@ -870,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "id": "e92edca1",
    "metadata": {
     "colab": {
@@ -955,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "id": "76daaa5b",
    "metadata": {
     "deletable": false,
@@ -996,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "id": "054d51bf",
    "metadata": {
     "colab": {
@@ -1053,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "id": "ae83fff0",
    "metadata": {
     "deletable": false,
@@ -1072,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "id": "3f157ad1",
    "metadata": {
     "colab": {
@@ -1177,7 +1161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
    "id": "58ce75dc",
    "metadata": {
     "colab": {},
@@ -1225,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 34,
    "id": "7df2d1d1",
    "metadata": {
     "deletable": false,
@@ -1262,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 36,
    "id": "b03eb998",
    "metadata": {
     "deletable": false,
@@ -1298,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 37,
    "id": "44fc5f76",
    "metadata": {
     "deletable": false,
@@ -1325,26 +1309,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1, Loss 10.1091\n",
-      "Time taken for one epoch: 8.806298971176147 sec\n",
-      "Epoch 2, Loss 9.4992\n",
-      "Time taken for one epoch: 2.1523849964141846 sec\n",
-      "Epoch 3, Loss 8.9151\n",
-      "Time taken for one epoch: 1.8388981819152832 sec\n",
-      "Epoch 4, Loss 8.3736\n",
-      "Time taken for one epoch: 1.7134144306182861 sec\n",
-      "Epoch 5, Loss 7.8815\n",
-      "Time taken for one epoch: 1.7163405418395996 sec\n",
-      "Epoch 6, Loss 7.4345\n",
-      "Time taken for one epoch: 1.7114596366882324 sec\n",
-      "Epoch 7, Loss 7.0419\n",
-      "Time taken for one epoch: 1.7119507789611816 sec\n",
-      "Epoch 8, Loss 6.7039\n",
-      "Time taken for one epoch: 1.715855360031128 sec\n",
-      "Epoch 9, Loss 6.4377\n",
-      "Time taken for one epoch: 1.7368535995483398 sec\n",
-      "Epoch 10, Loss 6.2355\n",
-      "Time taken for one epoch: 1.7280690670013428 sec\n"
+      "Epoch 1, Loss 10.1228\n",
+      "Time taken for one epoch: 8.092252969741821 sec\n",
+      "Epoch 2, Loss 9.5260\n",
+      "Time taken for one epoch: 1.6166877746582031 sec\n",
+      "Epoch 3, Loss 8.9422\n",
+      "Time taken for one epoch: 1.623042106628418 sec\n",
+      "Epoch 4, Loss 8.3995\n",
+      "Time taken for one epoch: 1.6274347305297852 sec\n",
+      "Epoch 5, Loss 7.9042\n",
+      "Time taken for one epoch: 1.6445350646972656 sec\n",
+      "Epoch 6, Loss 7.4557\n",
+      "Time taken for one epoch: 1.6318278312683105 sec\n",
+      "Epoch 7, Loss 7.0600\n",
+      "Time taken for one epoch: 1.6254866123199463 sec\n",
+      "Epoch 8, Loss 6.7175\n",
+      "Time taken for one epoch: 1.6386704444885254 sec\n",
+      "Epoch 9, Loss 6.4467\n",
+      "Time taken for one epoch: 1.6284120082855225 sec\n",
+      "Epoch 10, Loss 6.2416\n",
+      "Time taken for one epoch: 1.6445369720458984 sec\n"
      ]
     }
    ],
@@ -1384,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 38,
    "id": "55360633",
    "metadata": {
     "deletable": false,
@@ -1395,10 +1379,10 @@
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.checkpoint.checkpoint.CheckpointLoadStatus at 0x160d20a3fa0>"
+       "<tensorflow.python.checkpoint.checkpoint.CheckpointLoadStatus at 0x22fac4ba0a0>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1427,7 +1411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 39,
    "id": "987571df",
    "metadata": {
     "deletable": false,
@@ -1474,7 +1458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 42,
    "id": "7c4c4cfa",
    "metadata": {
     "deletable": false,
@@ -1571,7 +1555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 43,
    "id": "b5344f35",
    "metadata": {
     "deletable": false,
@@ -1597,32 +1581,23 @@
     "    ### START CODE HERE ###\n",
     "    \n",
     "    # Loop over all the articles\n",
-    "    for article in dataset:\n",
-    "        \n",
+    "    for article in dataset:    \n",
     "        # Loop over each paragraph of each article\n",
-    "        for paragraph in article['paragraphs']:\n",
-    "            \n",
+    "        for paragraph in article['paragraphs']:    \n",
     "            # Extract context from the paragraph\n",
     "            context = paragraph['context']\n",
-    "            \n",
     "            #Loop over each question of the given paragraph\n",
-    "            for qa in paragraph['qas']:\n",
-    "                \n",
+    "            for qa in paragraph['qas']:    \n",
     "                # If this question is not impossible and there is at least one answer\n",
-    "                if len(qa['answers']) > 0 and not(qa['is_impossible']):\n",
-    "                    \n",
+    "                if len(qa['answers']) > 0 and not(qa['is_impossible']):    \n",
     "                    # Create the question/context sequence\n",
     "                    question_context = 'question: ' + qa['question'] + ' context: ' + context\n",
-    "                    \n",
     "                    # Create the answer sequence. Use the text field of the first answer\n",
     "                    answer = 'answer: ' + qa['answers'][0]['text']\n",
-    "                    \n",
     "                    # Add the question_context to the inputs list\n",
     "                    inputs.append(question_context)\n",
-    "                    \n",
     "                    # Add the answer to the targets list\n",
     "                    targets.append(answer)\n",
-    "    \n",
     "    ### END CODE HERE ###\n",
     "    \n",
     "    return inputs, targets"
@@ -1630,7 +1605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 44,
    "id": "6744c424",
    "metadata": {
     "deletable": false,
@@ -1693,7 +1668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 45,
    "id": "f197bb69",
    "metadata": {
     "deletable": false,
@@ -1729,7 +1704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 46,
    "id": "947354ad",
    "metadata": {
     "deletable": false,
@@ -1765,7 +1740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 47,
    "id": "83393c74",
    "metadata": {
     "deletable": false,
@@ -1806,7 +1781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 48,
    "id": "aaaba558",
    "metadata": {
     "deletable": false,
@@ -1818,10 +1793,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1, Loss 5.982225\n",
-      "Time taken for one epoch: 34.56420683860779 sec\n",
-      "Epoch 2, Loss 5.353025\n",
-      "Time taken for one epoch: 35.79273247718811 sec\n"
+      "Epoch 1, Loss 5.987825\n",
+      "Time taken for one epoch: 53.55326581001282 sec\n",
+      "Epoch 2, Loss 5.353425\n",
+      "Time taken for one epoch: 55.944358825683594 sec\n"
      ]
     }
    ],
@@ -1861,7 +1836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 49,
    "id": "144e769b",
    "metadata": {
     "deletable": false,
@@ -1872,10 +1847,10 @@
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.checkpoint.checkpoint.CheckpointLoadStatus at 0x15f4df03d90>"
+       "<tensorflow.python.checkpoint.checkpoint.CheckpointLoadStatus at 0x22f9ea714f0>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1899,7 +1874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 50,
    "id": "92b40de0",
    "metadata": {
     "deletable": false,
@@ -1911,6 +1886,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "tf.Tensor([1525   10], shape=(2,), dtype=int32)\n",
       "Predicted next word is: 'blue'\n",
       "Answer so far: 'answer: blue'\n"
      ]
@@ -1927,7 +1903,7 @@
     "# All answers begin with the string \"answer: \"\n",
     "# Feel free to check that this is indeed the tokenized version of that string\n",
     "tokenized_answer = tf.constant([[1525,   10]])\n",
-    "\n",
+    "print(tokenizer.tokenize('answer: '))\n",
     "# Predict the next word using the transformer_utils.next_word function\n",
     "# Notice that it expects the question, answer and model (in that order)\n",
     "next_word = transformer_utils.next_word(tokenized_padded_question, tokenized_answer, transformer)\n",
@@ -1969,7 +1945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 51,
    "id": "91def253",
    "metadata": {
     "deletable": false,
@@ -1999,40 +1975,28 @@
     "    \n",
     "    # Tokenize the question\n",
     "    tokenized_question = tokenizer.tokenize(question)\n",
-    "    \n",
     "    # Add an extra dimension to the tensor\n",
-    "    tokenized_question = tf.expand_dims(tokenized_question, 0) \n",
-    "    \n",
+    "    tokenized_question = tf.expand_dims(tokenized_question, 0)\n",
     "    # Pad the question tensor\n",
-    "    padded_question = tf.keras.preprocessing.sequence.pad_sequences(tokenized_question,\n",
-    "                                                                    maxlen=encoder_maxlen,\n",
-    "                                                                    padding='post', \n",
-    "                                                                    truncating='post') \n",
+    "    padded_question = tf.keras.preprocessing.sequence.pad_sequences(tokenized_question, maxlen=encoder_maxlen, padding='post', truncating='post')\n",
     "    # ANSWER SETUP\n",
     "    \n",
     "    # Tokenize the answer\n",
     "    # Hint: All answers begin with the string \"answer: \"\n",
     "    tokenized_answer = tokenizer.tokenize('answer: ')\n",
-    "    \n",
     "    # Add an extra dimension to the tensor\n",
     "    tokenized_answer = tf.expand_dims(tokenized_answer, 0)\n",
-    "    \n",
     "    # Get the id of the EOS token\n",
-    "    eos = tokenizer.string_to_id(\"</s>\") \n",
-    "    \n",
+    "    eos = tokenizer.string_to_id(\"</s>\")\n",
     "    # Loop for decoder_maxlen iterations\n",
     "    for i in range(decoder_maxlen):\n",
-    "        \n",
     "        # Predict the next word using the model, the input document and the current state of output\n",
     "        next_word = transformer_utils.next_word(tokenized_question, tokenized_answer, model)\n",
-    "        \n",
     "        # Concat the predicted next word to the output \n",
     "        tokenized_answer = tf.concat([tokenized_answer, next_word], axis=1)\n",
-    "        \n",
     "        # The text generation stops if the model predicts the EOS token\n",
     "        if next_word == eos:\n",
-    "            break \n",
-    "    \n",
+    "            break\n",
     "    ### END CODE HERE ###\n",
     "\n",
     "    return tokenized_answer "
@@ -2048,7 +2012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 52,
    "id": "163e79eb",
    "metadata": {
     "deletable": false,
@@ -2093,7 +2057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 53,
    "id": "19ac8067",
    "metadata": {
     "deletable": false,
@@ -2124,7 +2088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 54,
    "id": "6c381df3",
    "metadata": {
     "deletable": false,
@@ -2162,7 +2126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 55,
    "id": "fc9c898f",
    "metadata": {
     "deletable": false,
